{
    "name": "PlayerJoysticks",
    "maps": [
        {
            "name": "Player",
            "id": "bb5c9fdd-a052-45c6-9892-7413784cc308",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "355e59d2-4493-4ef2-b487-d450f5d8e146",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jumping",
                    "type": "Button",
                    "id": "23ba509e-0ca4-49e7-ba62-0e8c98243790",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attacking",
                    "type": "Button",
                    "id": "ce23fece-0304-4c9b-a73b-f27784c9181c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Blocking",
                    "type": "Button",
                    "id": "628aea2d-7293-4ee7-b3fe-678ff2a0c4ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05,pressPoint=0.05)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fac3aa05-03dc-4ef0-be73-e6b4cd0c86cf",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2963acc4-e00e-4010-842b-559050026e1f",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attacking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef6e4af1-115a-48d2-bd4c-40343e128855",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blocking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cf750dd-f03c-41ca-98e3-b487a252b952",
                    "path": "<AndroidJoystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}